<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Organization_Screens.Org_Login">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title_NO"
            android:textColor="#D6201C"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_Waiting"
            android:textColor="#1335F3"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Org_Login"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="#454545"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_margin="25dp"

        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/Org_loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/Org_Username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_txt_shape"
                android:textSize="22sp"
                android:drawableStart="@drawable/person_black"
                android:drawablePadding="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="password"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/Org_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_txt_shape"
                android:textSize="22sp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/Org_forgotPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                android:textColor="#F44336"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/Org_BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="#E91E63"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:cornerRadius="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/Org_forgotView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="e-mail"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>


            <EditText
                android:id="@+id/Org_email_frgt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_txt_shape"
                android:textSize="22sp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="Enter e-mail id"
                android:textColor="@color/black"
                android:inputType="text"
                android:importantForAutofill="no"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/Org_BtnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:layout_gravity="end"
                    android:backgroundTint="#E91E63"
                    android:textSize="20sp"
                    android:layout_marginRight="30dp"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"/>
            <Button
                android:id="@+id/Org_BtnForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:layout_gravity="end"
                android:backgroundTint="#E91E63"
                android:layout_marginLeft="30dp"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:cornerRadius="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/Org_Register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not yet Registered ?"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#292828"/>
        <TextView
            android:id="@+id/Org_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:textColor="#EF5350"/>
    </LinearLayout>

</LinearLayout>