<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLog"
    tools:openDrawer="start"
    tools:context=".Home_Page">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="15dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="300dp"
           android:background="@drawable/multi_color"
           android:gravity="center_horizontal"
           android:orientation="vertical"       app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <LinearLayout
               android:id="@+id/linearLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="30dp"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="5dp"
                   android:text="@string/title_NO"
                   android:textColor="#F61111"
                   android:textSize="30sp"
                   android:textStyle="bold" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title_Waiting"
                   android:textColor="#1335F3"
                   android:textSize="30sp"
                   android:textStyle="bold" />
           </LinearLayout>

           <Button
               android:id="@+id/BtnScanner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="80dp"
               android:text="@string/Get_Token_Btn"
               android:textSize="20sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

           <Button
               android:id="@+id/BtnTest"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:text="Test Button"
               android:textSize="20sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/Menu_Btn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>