<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Organization_Screens.Org_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/title_NO"
                android:textColor="#D6201C"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_Waiting"
                android:textColor="#1335F3"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Org_Registration"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="#454545"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp"
                app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Domain/Sector"
                    android:textSize="18sp"/>
               <Spinner
                   android:id="@+id/Select_Domain"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:paddingStart="8dp"
                   android:background="@drawable/arrow_drop_down"
                   />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Organization Name"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_txt_shape"
                android:textSize="22sp"
                android:paddingStart="15dp"
                android:hint="Enter your organization name"
                android:inputType="text"
                android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization Country"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:inputType="text"
                    android:hint="Enter Country"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization State"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter State"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization District"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter District"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization Block/Mandal"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter Block/Mandal"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization Place/Landmark"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter Place/Landmark"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization GST"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter GST"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mobile Number"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter MobileNumber"
                    android:inputType="number|phone"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Username"
                    android:inputType="text"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Re-EnterPassword"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Re-EnterPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Billing Counters"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_txt_shape"
                    android:textSize="22sp"
                    android:paddingStart="15dp"
                    android:hint="Enter Billing counters"
                    android:inputType="number"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/Org_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Org_Register"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#E91E63"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"/>

                <LinearLayout
                    android:id="@+id/Org_Register_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="You Already Registered !"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="#292828"/>
                    <TextView
                        android:id="@+id/Org_Goto_Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textColor="#EF5350"/>
                </LinearLayout>


            </LinearLayout>

            </androidx.cardview.widget.CardView>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>